server/manifests/Deployment_server.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: server
  labels:
    app: server
  annotations:
    image.openshift.io/triggers: |-
      [
        {
          "from": {
            "kind": "ImageStreamTag",
            "name": "server:latest"
          },
          "fieldPath": "spec.template.spec.containers[0].image"
        }
      ]
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
        deployment: server
    spec:
      volumes:
        - name: certs
          secret:
            secretName: server-tls
            defaultMode: 420
      containers:
        - resources:
            limits:
              memory: 1Gi
          name: server
          ports:
            - name: http-node
              containerPort: 3001
              protocol: TCP
          imagePullPolicy: Always
          volumeMounts:
            - name: certs
              readOnly: true
              mountPath: /opt/app-root/certs
          image: server:latest
      restartPolicy: Always
  strategy:
    type: Recreate
