server/manifests/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: server
  labels:
    app: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
        deployment: server
    spec:
      volumes:
        - name: certs
          secret:
            secretName: server-certs
            defaultMode: 420
      containers:
        - resources:
            limits:
              memory: 1Gi
          name: server
          ports:
            - name: http-node
              containerPort: 3001
              protocol: TCP
          imagePullPolicy: Always
          volumeMounts:
            - name: certs
              readOnly: true
              mountPath: /opt/app-root/certs
          image: >-
            image-registry.openshift-image-registry.svc:5000/demo1/server:latest
      restartPolicy: Always
  strategy:
    type: Recreate
