server/manifests/Service_server.yaml
kind: Service
apiVersion: v1
metadata:
  name: server
  labels:
    app: server
spec:
  ports:
    - name: http-3001
      protocol: TCP
      port: 443
      targetPort: 3001
  type: ClusterIP
  selector:
    app: server
    deployment: server
